# stapi-pydantic

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/stapi_pydantic/: __init__.py
tests/: test_order.py
